[gd_scene load_steps=11 format=3 uid="uid://3siy5yct6271"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_q8um6"]
[ext_resource type="PackedScene" uid="uid://oytf8i72nwlc" path="res://scenes/player/deck.tscn" id="2_4q0s8"]
[ext_resource type="PackedScene" uid="uid://dknx5ie1iajef" path="res://scenes/player/ui/proceed.tscn" id="3_chtco"]
[ext_resource type="Script" path="res://scripts/controls/fsm.gd" id="4_bx2jb"]
[ext_resource type="PackedScene" uid="uid://b7ulyu1y6ujlj" path="res://scenes/control/states/draw_state.tscn" id="5_pffyq"]
[ext_resource type="PackedScene" uid="uid://cj4vfph8lkvrs" path="res://scenes/control/states/player_input_state.tscn" id="6_03gxs"]
[ext_resource type="Script" path="res://scripts/controls/states/initial_draw.gd" id="7_24r1f"]
[ext_resource type="Script" path="res://scripts/controls/states/idle_state.gd" id="7_bafc6"]

[sub_resource type="InputEventKey" id="InputEventKey_vn7s4"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_spqy1"]
events = [SubResource("InputEventKey_vn7s4")]

[node name="Player" type="Node" groups=["player"]]
script = ExtResource("1_q8um6")

[node name="health" type="Sprite2D" parent="."]

[node name="health_label" type="Label" parent="health"]
offset_right = 40.0
offset_bottom = 23.0

[node name="deck" parent="." instance=ExtResource("2_4q0s8")]

[node name="discard_pile" type="Node2D" parent="."]

[node name="PlayerFSM" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_bx2jb")
initial_state = NodePath("InitialDraw")

[node name="DrawState" parent="PlayerFSM" node_paths=PackedStringArray("player", "next_state", "proceed_btn") instance=ExtResource("5_pffyq")]
player = NodePath("../..")
next_state = NodePath("../PlayerInputState")
proceed_btn = NodePath("../../CanvasLayer/hand/Proceed")

[node name="Timer" type="Timer" parent="PlayerFSM/DrawState"]
one_shot = true

[node name="PlayerInputState" parent="PlayerFSM" node_paths=PackedStringArray("next_state", "proceed_btn") instance=ExtResource("6_03gxs")]
next_state = NodePath("../IdleState")
proceed_btn = NodePath("../../CanvasLayer/hand/Proceed")

[node name="IdleState" type="Node" parent="PlayerFSM" node_paths=PackedStringArray("next_state", "proceed_btn")]
script = ExtResource("7_bafc6")
next_state = NodePath("../DrawState")
proceed_btn = NodePath("../../CanvasLayer/hand/Proceed")

[node name="InitialDraw" type="Node" parent="PlayerFSM" node_paths=PackedStringArray("player", "next_state", "proceed_btn")]
script = ExtResource("7_24r1f")
player = NodePath("../..")
next_state = NodePath("../PlayerInputState")
proceed_btn = NodePath("../../CanvasLayer/hand/Proceed")

[node name="Timer" type="Timer" parent="PlayerFSM/InitialDraw"]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="hand" type="Control" parent="CanvasLayer"]
custom_minimum_size = Vector2(0, 275)
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -208.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="Proceed" parent="CanvasLayer/hand" instance=ExtResource("3_chtco")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.96
anchor_right = 0.96
offset_left = -85.0
offset_top = 120.0
offset_right = 0.0
offset_bottom = 151.0
grow_horizontal = 0
shortcut = SubResource("Shortcut_spqy1")

[node name="debug_label" type="Label" parent="CanvasLayer/hand"]
layout_mode = 0
offset_left = 349.0
offset_top = -341.0
offset_right = 389.0
offset_bottom = -318.0

[node name="wrapper" type="Control" parent="CanvasLayer/hand"]
layout_mode = 1
anchor_top = -0.175
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.125004
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/hand/wrapper"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_right = 205
theme_override_constants/margin_bottom = 25

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/hand/wrapper/MarginContainer"]
layout_mode = 2
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/hand/wrapper/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
mouse_filter = 2
theme_override_constants/separation = 12
alignment = 2

[connection signal="timeout" from="PlayerFSM/DrawState/Timer" to="PlayerFSM/DrawState" method="_on_timer_timeout"]
[connection signal="timeout" from="PlayerFSM/InitialDraw/Timer" to="PlayerFSM/InitialDraw" method="_on_timer_timeout"]
